--- a/config/content.htm
+++ b/config/content.htm
@@ -892,8 +892,9 @@ frameStops: {
 <p><span style="background-color: #ffff99;">2a 與 2b 必須在 2022.01.06 上課之前完成 Final Project</span></p>
 <p><a href="https://github.com/mdecourse/cad2021/discussions/8"></a>-----------------------------------------------------------------------------------------------------</p>
 <h2>40923230</h2>
-<p>零件圖+組合圖</p>
-<p>運作模擬</p>
+<h3>零件圖+組合圖</h3>
+<p></p>
+<p></p>
 <script>
 var winkVideoData = {
   dataVersion: 1,
@@ -913,8 +914,34 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressLeftClass"></div>
 <div class="winkVideoControlBarProgressLeftClass"></div>
 <div class="winkVideoControlBarProgressLeftClass"></div>
+<div class="winkVideoControlBarProgressLeftClass">
+<h3>畫圖</h3>
+</div>
 <div class="winkVideoControlBarProgressLeftClass"></div>
 <div class="winkVideoControlBarProgressLeftClass"></div>
+</div>
+<script>
+var winkVideoData = {
+  dataVersion: 1,
+  frameRate: 20,
+  buttonFrameLength: 10,
+  buttonFrameOffset: 5,
+  frameStops: {
+  },
+};
+</script>
+<div class="winkVideoContainerClass"><video class="winkVideoClass" data-dirname="/static" data-varname="winkVideoData" height="756" video="" width="1344">
+<source src="/downloads/畫圖.mp4" type="video/mp4"/></video>
+<div class="winkVideoOverlayClass"></div>
+<div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
+<div class="winkVideoControlBarProgressLeftClass"></div>
+<div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
+<div class="winkVideoControlBarProgressRightClass"></div>
+<div class="winkVideoControlBarProgressFilledMiddleClass"></div>
+<div class="winkVideoControlBarProgressThumbClass"></div>
+<h3 class="winkVideoControlBarProgressThumbClass">運作模擬</h3>
+</div>
+<div class="winkVideoPlayOverlayClass"></div>
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
 </div>
