--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -965,7 +965,7 @@ var winkVideoData = {
 <source src="/downloads/移動.mp4" type="video/mp4"/></video>
 <div class="winkVideoOverlayClass"></div>
 <div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
-<div class="winkVideoControlBarProgressLeftClass">-----------------------------------------------------------------------------------------------------</div>
+<div class="winkVideoControlBarProgressLeftClass"></div>
 <div class="winkVideoControlBarProgressLeftClass"></div>
 <div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
 <div class="winkVideoControlBarProgressRightClass"></div>
