--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -914,7 +914,7 @@ var winkVideoData = {
 </script>
 </p>
 <div class="winkVideoContainerClass"><video class="winkVideoClass" data-dirname="/static" data-varname="winkVideoData" height="788" video="" width="1402">
-<source src="/downloads/40923230期末考1.mp4" type="video/mp4"/></video>
+<source src="https://40923230.github.io/cad2021_hw/downloads/40923230%E6%9C%9F%E6%9C%AB%E8%80%831.mp4" type="video/mp4"/></video>
 <div class="winkVideoOverlayClass"></div>
 <div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
 <div class="winkVideoControlBarProgressLeftClass"></div>
@@ -938,7 +938,7 @@ var winkVideoData = {
 };
 </script>
 <div class="winkVideoContainerClass"><video class="winkVideoClass" data-dirname="/static" data-varname="winkVideoData" height="756" video="" width="1344">
-<source src="/downloads/畫圖.mp4" type="video/mp4"/></video>
+<source src="https://40923230.github.io/cad2021_hw/downloads/%E7%95%AB%E5%9C%96.mp4" type="video/mp4"/></video>
 <div class="winkVideoOverlayClass"></div>
 <div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
 <div class="winkVideoControlBarProgressLeftClass"></div>
@@ -962,7 +962,7 @@ var winkVideoData = {
 };
 </script>
 <div class="winkVideoContainerClass"><video class="winkVideoClass" data-dirname="/static" data-varname="winkVideoData" height="788" video="" width="1402">
-<source src="/downloads/移動.mp4" type="video/mp4"/></video>
+<source src="https://40923230.github.io/cad2021_hw/downloads/%E7%A7%BB%E5%8B%95.mp4" type="video/mp4"/></video>
 <div class="winkVideoOverlayClass"></div>
 <div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
 <div class="winkVideoControlBarProgressLeftClass"></div>
