--- a/config/content.htm
+++ b/config/content.htm
@@ -1000,6 +1000,7 @@ var winkVideoData = {
 <p>-------------------------------------------------------------------</p>
 <p>這學期的課程非常艱深，不僅需要繪圖，還會用到不熟悉的繪圖軟體，還要撰寫程式讓組合件可以運作，就像全部從零開始一樣，邏輯必須清晰，還好老師有開放線上討論區幫助我解決難題，還有優秀的組長及組員的幫助讓我能夠完成這次的作業。</p>
 <p>-------------------------------------------------------------------</p>
+<h1>期末考試</h1>
 <p>機械手臂</p>
 <script>
 var winkVideoData = {
@@ -1022,7 +1023,8 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressThumbClass"></div>
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
-</div><h1>planned speed</h1>
+</div>
+<h1>planned speed</h1>
 <p><span>hwpages1  100%</span></p>
 <p><span>hw<span>pages</span>2  100%</span></p>
 <p>cad1(inventor)   80%</p>
