--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1012,8 +1012,7 @@ var winkVideoData = {
 };
 </script>
 <div class="winkVideoContainerClass"><video class="winkVideoClass" data-dirname="/static" data-varname="winkVideoData" height="756" video="" width="1344">
-<source src="/downloads/2.mp4" type="video/mp4"/>
-</video>
+<source src="/downloads/2.mp4" type="video/mp4"/></video>
 <div class="winkVideoOverlayClass"></div>
 <div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
 <div class="winkVideoControlBarProgressLeftClass"></div>
@@ -1023,7 +1022,9 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressThumbClass"></div>
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
-</div><h1>planned speed</h1>
+</div>
+<h1>期末考試</h1>
+<h1>planned speed</h1>
 <p><span>hwpages1  100%</span></p>
 <p><span>hw<span>pages</span>2  100%</span></p>
 <p>cad1(inventor)   80%</p>
