--- a/content/期末考試.html
+++ b/content/期末考試.html
@@ -152,7 +152,7 @@ var winkVideoData = {
 };
 </script>
 <div class="winkVideoContainerClass"><video class="winkVideoClass" data-dirname="./../cmsimde/static" data-varname="winkVideoData" height="756" video="" width="1344">
-<source src="./../downloads/2.mp4" type="video/mp4"/></video>
+<source src="https://40923230.github.io/cad2021_hw/downloads/2.mp4" type="video/mp4"/></video>
 <div class="winkVideoOverlayClass"></div>
 <div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
 <div class="winkVideoControlBarProgressLeftClass"></div>
@@ -162,8 +162,7 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressThumbClass"></div>
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
-</div>
-<br />40923230 << <a href='40923230.html'>Previous</a> <a href='planned speed.html'>Next</a> >> planned speed</div>
+</div><br />40923230 << <a href='40923230.html'>Previous</a> <a href='planned speed.html'>Next</a> >> planned speed</div>
         
     <!-- footer -->
       <div class="container">
