--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1013,8 +1013,7 @@ var winkVideoData = {
 };
 </script>
 <div class="winkVideoContainerClass"><video class="winkVideoClass" data-dirname="/static" data-varname="winkVideoData" height="720" video="" width="1280">
-<source src="/downloads/inventor2.mp4" type="video/mp4"/>
-</video>
+<source src="https://40923230.github.io/cad2021_hw/downloads/inventor2.mp4" type="video/mp4"/></video>
 <div class="winkVideoOverlayClass"></div>
 <div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
 <div class="winkVideoControlBarProgressLeftClass"></div>
@@ -1048,8 +1047,7 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressThumbClass"></div>
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
-</div>
-<h1>planned speed</h1>
+</div><h1>planned speed</h1>
 <p><span>hwpages1  100%</span></p>
 <p><span>hw<span>pages</span>2  100%</span></p>
 <p>cad1(inventor)   80%</p>
