--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1037,7 +1037,8 @@ var winkVideoData = {
 };
 </script>
 <div class="winkVideoContainerClass"><video class="winkVideoClass" data-dirname="/static" data-varname="winkVideoData" height="756" video="" width="1344">
-<source src="https://40923230.github.io/cad2021_hw/downloads/2.mp4" type="video/mp4"/></video>
+<source src="/downloads/40923230.mp4" type="video/mp4"/>
+</video>
 <div class="winkVideoOverlayClass"></div>
 <div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
 <div class="winkVideoControlBarProgressLeftClass"></div>
